--- a/index.html
+++ b/index.html
@@ -783,6 +783,7 @@
 
         #colMid {
             background-color: #d3d3d3;
+            padding: 0 4rem;
         }
 
 
@@ -794,24 +795,56 @@
 
 #staticPage .bigBox {
     background-color: #808080;
+    margin: 3rem;
 }
 
 .ami_products_container {
   max-width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-gap: 1rem;
+  grid-gap: 3rem;
+  padding: 0 2rem 2rem;
 }
 
 /* Screen larger than 600px? 2 column */
-@media (min-width: 600px) {
+@media (min-width: 900px) {
   .ami_products_container { grid-template-columns: repeat(2, 1fr); }
 }
-@media (min-width: 900px) {
+@media (min-width: 1200px) {
   .ami_products_container { grid-template-columns: repeat(3, 1fr); }
 }
-@media (min-width: 1100px) {
+@media (min-width: 1520px) {
   .ami_products_container { grid-template-columns: repeat(4, 1fr); }
+}
+
+@media (max-width: 600px) {
+    #colMid {
+        padding: 0;
+    }
+
+    #staticPage .bigBox {
+        margin: 1rem 0;
+    }
+}
+
+/* Box Title */
+
+#staticPage .bigBox .boxTitle span {
+    font-weight: 400;
+    font-size: 2.5rem;
+    height: 2em;
+    background-color: #6b8e23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #fff;
+    border-radius: 0px;
+}
+
+@media (max-width: 900px) {
+    #staticPage .bigBox .boxTitle span {
+        font-size: 1.5rem;
+    }
 }
 
 /* .ami_card {
@@ -827,7 +860,7 @@
   border-radius: 10px;
   /* background-color: #b2bec3; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  min-height: 300px;
+  min-height: 200px;
   
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -835,7 +868,7 @@
 
 #staticPage .ami_card .ami_imageWrapper {
     display: flex;
-    padding: 20px;
+    padding: 1rem;
     align-items: center;
     justify-content: center;
     background-color: #fff;
@@ -869,9 +902,9 @@
   margin: 12px;
 
   display: block;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   overflow: hidden;
-  max-width: 200px;
+  /* max-width: 220px; */
   transition: white-space 0.3s;
 }
 
@@ -900,20 +933,6 @@
   transform: scale(1.05);
   transition: transform 0.3s, box-shadow 0.3s;
 } 
-
-/* Box Title */
-
-#staticPage .bigBox .boxTitle span {
-    font-weight: 400;
-    font-size: 3rem;
-    height: 2em;
-    background-color: #6b8e23;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #fff;
-    border-radius: 0px;
-}
 
 /* Description Long */
 
